2008-01-28  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* devtools/gen-avr-lib-tree.sh (AVR31_DEV_INFO): remove trailing
	semicolon in last entry.  It caused a blank line following a
	backslash in lib/avr/avr31/Makefile.am, which made automake issue
	a warning.

2008-01-24  Anatoly Sokolov <aesok@post.ru>

	* doc/api/using-tools.dox: Document '__AVR_HAVE_JMP_CALL__' macro.
	Mark '__AVR_MEGA__' and '__AVR_ENHANCED__' as obsolete. Remove 
	'__AVR_HAVE_RAMPZ__', '__AVR_HAVE_ELPM__' and '__AVR_HAVE_ELPMX__' 
	macros from 'avr5' architecture and add to 'avr51'.

2008-01-23  Anatoly Sokolov <aesok@post.ru>

	* configure.ac: Add 'avr31' and 'avr51' architectures.
	* devtools/gen-avr-lib-tree.sh (AVR_ARH_INFO): (Ditto.).
	(AVR31_DEV_INFO, AVR51_DEV_INFO): New.
	* doc/api/using-tools.dox: Document 'avr31' and 'avr51'.

2008-01-14  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/io90pwm2b.h: Add missing EEAR word register.
	* include/avr/io90pwm3b.h: Ditto.

2008-01-13  Dmitry Xmelkov  <dmix@gmail.ru>

	Fix for bug #21995: pgm_read_xxxx() does not use enhanced LPM
	instruction.
	* include/avr/common.h: Restore the __AVR_HAVE_LPMX__ (also
	__AVR_HAVE_MOVW__, __AVR_HAVE_MUL__) definitions (in case that
	they are not defined by the compiler).
	* tests/simulate/regression/bug-21995.c: New file.
	* NEWS: Add to fixed bug list.

2008-01-09  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #21986.
	* include/avr/iotn13.h: Fix bit definition.

2008-01-07  Anatoly Sokolov <aesok@post.ru>

	* doc/api/using-tools.dox: Fix GCC version for 'avr35' architecture.

2008-01-06  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/io90pwm1.h: Fix default fuse definitions.
	* include/avr/io90pwm216.h: Ditto.
	* include/avr/io90pwm2b.h: Ditto.
	* include/avr/io90pwm316.h: Ditto.
	* include/avr/io90pwm3b.h: Ditto.
	* include/avr/io90pwmx.h: Ditto.
	* include/avr/iocan128.h: Ditto.
	* include/avr/iocan32.h: Ditto.
	* include/avr/iocan64.h: Ditto.